# backend/cpfcnpj-crud-api/http/routes/document_query.go
@@ -2,17 +2,20 @@ package routes
 
 import (
 	"github.com/labstack/echo/v4"
-	"zisluiz.com/cpfcnpj-crud-api/command/application"
+	"zisluiz.com/cpfcnpj-crud-api/command/domain/exception"
 	"zisluiz.com/cpfcnpj-crud-api/http/adapter"
-	"zisluiz.com/cpfcnpj-crud-api/infra/repository"
+	"zisluiz.com/cpfcnpj-crud-api/infra/dao"
+	"zisluiz.com/cpfcnpj-crud-api/infra/data"
+	"zisluiz.com/cpfcnpj-crud-api/query/application"
+	"zisluiz.com/cpfcnpj-crud-api/query/model"
 )
 
 var (
-	documentApplication = &application.DocumentCrudApplication{DocumentRepository: &repository.DocumentRepositoryImpl{}}
+	queryDocumentApplication = &application.DocumentQueryApplication{DocumentDAO: &dao.DocumentDAOImpl{}}
 )
 
-func BindRoute(group *echo.Group) {
-	group.GET("/documents", getDocument)
+func BindQueryRoute(group *echo.Group) {
+	group.GET("/documents", queryDocuments)
 }
 
 // GetDocument godoc
@@ -26,10 +29,16 @@ func BindRoute(group *echo.Group) {
 // @Failure 400 {object} data.Response
 // @Failure 404 {object} data.Response
 // @Failure 500 {object} data.Response
-// @Router /api/documents/{id} [get]
-func getDocument(c echo.Context) error {
-	id := c.Param("id")
+// @Router /api/documents [get]
+func queryDocuments(c echo.Context) error {
+	var query = new(model.Query)
 
-	var response = documentApplication.Get(id)
+	if err := c.Bind(query); err != nil {
+		return adapter.ToHttpResponse(c, data.ResponseError(exception.NewError(err.Error())))
+	}
+
+	query.ParseJsonParams()
+
+	var response = queryDocumentApplication.FindDocumentsBy(query)
 	return adapter.ToHttpResponse(c, response)
 }
